	* Fixed bug #7843: t3lib_div uses array_unshift() instead of array_shift() in getIndpEnv() (thanks to Christian Kuhn)

2008-03-16  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7396: hardcoded fieldset and legend around radio buttons
	* Fixed bug #7817: Transparent PNGs do not work in IE6
	* Fixed bug #7873: Wrong condition for IE6, credits Steffen Kamper
	* Code cleanup: replaced CVS with SVN
	* Updated Copyright notices

2008-03-15  Ingo Renner  <ingo@typo3.org>

	* Added follow up to #7588: Accesscheck for clearCache, credits Steffen Kamper
	* Fixed bug #7777: Hide Filter is not possible, credits Steffen Kamper

2008-03-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7857: htmlArea RTE: hidePStyleItems does not work anymore
	* Fixed bug #7867: htmlArea RTE undo/redo does not restore caret position
	* Fixed bug #7857 (revisited): htmlArea RTE: hidePStyleItems does not work anymore
	* Fixed bug #7867 (revisited): htmlArea RTE undo/redo does not restore caret position

2008-03-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7862: htmlArea RTE: incorrect nesting of ol/ul inside definition lists

2008-03-14  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7850: error in publish.php if errors in TCE should be shown, credits Daniel Poetzinger
	* Fixed page tree filter background in IE6

2008-03-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7851: htmlArea RTE causes memory leaks in IE
	* Fixed bug #7852: JS error raised in IE7 when closing htmlArea RTE
	* Fixed bug #7853: htmlArea RTE formatblock does not allow removing p or hx format in FF

2008-03-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #6064 (revisited): htmlArea RTE adds unwanted <p> tags in table cells

2008-03-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7827: IRRE - Wrong mouse pointer on links to create/translate child records

2008-03-12  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7730: No hover in listview, credits Georg Ringer